profilelist1exp/unpackaged/objects/UDS_MyForecast__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECS_Quarterly_Judgement_Best__c</fullName>
        <label>ECS Quarterly Submitted Best Case</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECS_Quarterly_Judgement__c</fullName>
        <label>ECS Quarterly Submitted Commit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY21 Q1</fullName>
                </value>
                <value>
                    <fullName>FY21 Q2</fullName>
                </value>
                <value>
                    <fullName>FY21 Q3</fullName>
                </value>
                <value>
                    <fullName>FY21 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Isilon_Quarterly_Judgement_Best__c</fullName>
        <label>Isilon Quarterly Submitted Best Case</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Isilon_Quarterly_Judgement__c</fullName>
        <label>Isilon Quarterly Submitted Commit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nautilus_Quarterly_Judgement_Best__c</fullName>
        <label>Nautilus Quarterly Submitted Best Case</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nautilus_Quarterly_Judgement__c</fullName>
        <label>Nautilus Quarterly Submitted Commit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <formula>TEXT(DAY(DATEVALUE( CreatedDate ) ))+&quot;/&quot;+TEXT(MONTH(DATEVALUE( CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
        <label>Submit Date</label>
        <type>Text</type>
    </fields>
    <label>UDS MyForecast</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UMF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDS MyForecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Editable_Only_In_CreatedDate_Week</fullName>
        <active>true</active>
        <description>If CreatedDate &lt;&gt; THIS MONTH, do not allow edits.</description>
        <errorConditionFormula>NOT(ISNULL(CreatedDate))&amp;&amp;IF(CASE(MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7),
0, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 0)),&quot;true&quot;,&quot;false&quot;),
1, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 6)),&quot;true&quot;,&quot;false&quot;),
2, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 5)),&quot;true&quot;,&quot;false&quot;),
3, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 4)),&quot;true&quot;,&quot;false&quot;),
4, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 3)),&quot;true&quot;,&quot;false&quot;),
5, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 2)),&quot;true&quot;,&quot;false&quot;),
6, IF((TODAY()&lt;(DATEVALUE(CreatedDate) + 1)),&quot;true&quot;,&quot;false&quot;),
&quot;false&quot;)
=&quot;true&quot;,false,true)</errorConditionFormula>
        <errorMessage>You cannot edit record past the week it was created.</errorMessage>
    </validationRules>
</CustomObject>